# vowpal_wabbit

./: CMakeLists.txt  Makefile  README.md  allreduce-1.0-1.rockspec  allreduce.h  init.cpp  init.lua  test.lua
cluster/: Makefile
